--- a/day2/侦听器的应用场景.html
+++ b/day2/侦听器的应用场景.html
@@ -16,34 +16,37 @@
             <span>
                 <input type="text" v-model.lazy="uname">
             </span>
-            <span>{{tip}}</span>
+            <div>{{tip}}</div>
         </div>
     </div>
     <script>
-        var vm = new Vue({
+        const vm = new Vue({
             el: '#app',
             data: {
                 uname: '',
                 tip: ''
             },
             methods: {
-                checkname: function(uname) {
+                detect: function(uname) {
                     var that = this
                     setTimeout(function() {
                         if (uname == 'admin') {
-                            that.tip = '用户名已经存在，请更换一个'
+                            that.tip = '已经重名'
                         } else {
-                            that.tip = '用户名可以使用'
+                            that.tip = '可以使用'
                         }
                     }, 2000)
+
                 }
             },
             watch: {
                 uname: function(val) {
-                    this.checkname(val)
-                    this.tip = '正在验证...'
+                    this.detect(val)
+                    this.tip = '正在验证'
+                        // console.log(this.tip);
                 }
             }
+
         })
     </script>
 </body>
