--- a/day2/过滤器.html
+++ b/day2/过滤器.html
@@ -12,29 +12,24 @@
 <body>
     <div id="app">
         <input type="text" v-model="msg">
-        <div>{{msg|upper}}</div>
-        <div>{{msg|lower}}</div>
-
+        <div>{{msg|low}}</div>
+        <div>{{msg|up}}</div>
     </div>
     <script>
-        // 过滤器作用：格式化数据，比如将字符串格式化为字母大写，将日期格式化为指定的格式
-        // Vue.filter('upper', function(val) {
-        //     return val.charAt(0).toUpperCase() + val.slice(1)
-        // })
-        Vue.filter('lower', function(val) {
-            return val.charAt(0).toLowerCase() + val.slice(1)
+        Vue.filter('up', function(val) {
+            // console.log(val.toUpperCase());
+            return val.toUpperCase()
         })
+        Vue.filter('low', function(val) {
+                // console.log(val.toLowerCase());
+                return val.toLowerCase()
+            })
+            // 过滤器作用：格式化数据，比如将字符串格式化为字母大写，将日期格式化为指定的格式
         var vm = new Vue({
             el: '#app',
             data: {
-                msg: ""
-            },
-            filters: {
-                upper: function(val) {
-                    return val.charAt(0).toUpperCase() + val.slice(1)
-                }
-            },
-            methods: {}
+                msg: ''
+            }
         })
     </script>
 </body>
