--- a/day4/async与await用法.html
+++ b/day4/async与await用法.html
@@ -69,11 +69,11 @@
         //         .then(function(ret) {
         //             console.log(ret.data);
         //         })
-        async function queryData() {
-            var ret = await axios.get('adata')
-            console.log(ret.data);
-        }
-        queryData()
+        // async function queryData() {
+        //     var ret = await axios.get('adata')
+        //     console.log(ret.data);
+        // }
+        // queryData()
     </script>
 </body>
 
