--- a/day4/mybook/public/调数据.html
+++ b/day4/mybook/public/调数据.html
@@ -11,16 +11,16 @@
 
 <body>
     <script>
-        // axios.get('http://localhost:3000/books')
-        //     .then(function(res) {
-        //         console.log(res);
-        //     })
-        axios.get('http://localhost:3000/books/:id', {
-                id: 1
-            })
+        axios.get('http://localhost:3000/books')
             .then(function(res) {
-                console.log(res);
+                console.log(res.data);
             })
+            // axios.get('http://localhost:3000/books/:id', {
+            //         id: 1
+            //     })
+            //     .then(function(res) {
+            //         console.log(res);
+            //     })
     </script>
 </body>
 
