--- a/vue案例/Tab选项卡/index.html
+++ b/vue案例/Tab选项卡/index.html
@@ -57,13 +57,40 @@
     <div id="app">
         <div class="tab">
             <ul>
-                <li></li>
+                <li :key="item.id" v-for="item in list" @click="toggle(item.id)" :class="item.id==ci?'active':''">{{item.title}}</li>
             </ul>
-            <div>
-                <img>
+            <div :key="item.id" v-for="item in list" :class="item.id==ci?'current':''">
+                <img :src="item.path" alt="">
             </div>
         </div>
     </div>
+    <script>
+        const vm = new Vue({
+            el: '#app',
+            data: {
+                ci: 1,
+                path: 'img/apple.png',
+                list: [{
+                    id: 1,
+                    title: 'apple',
+                    path: 'img/apple.png'
+                }, {
+                    id: 2,
+                    title: 'orange',
+                    path: 'img/orange.png'
+                }, {
+                    id: 3,
+                    title: 'lemon',
+                    path: 'img/lemon.png'
+                }]
+            },
+            methods: {
+                toggle: function(id) {
+                    this.ci = id
+                }
+            }
+        })
+    </script>
 </body>
 
 </html>
