--- a/day3/组件具名插槽.html
+++ b/day3/组件具名插槽.html
@@ -12,12 +12,13 @@
 <body>
     <div id="app">
         <base-layout>
+
             <p slot="header">标题信息</p>
             <p>主要内容1</p>
             <p>主要内容2</p>
             <p slot="footer">底部信息信息</p>
         </base-layout>
-        <base-layout>
+        <!-- <base-layout>
             <template slot="header">
             <p>标题信息1</p>
             <p>标题信息2</p>
@@ -28,7 +29,7 @@
             <p>底部信息信息1</p>
             <p>底部信息信息2</p>
         </template>
-        </base-layout>
+        </base-layout> -->
     </div>
 
 
